[gd_scene load_steps=7 format=2]

[ext_resource path="res://Themes/menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/CatMan Menu.png" type="Texture" id=2]
[ext_resource path="res://Scenes/menu.gd" type="Script" id=3]
[ext_resource path="res://UI/font.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 1280, 720 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 4 )

[node name="Menu" type="Node"]
script = ExtResource( 3 )

[node name="CanvasMenu" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 33.0
margin_top = -147.0
margin_right = 124.0
margin_bottom = -31.0
grow_vertical = 0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="CanvasMenu/VBoxContainer"]
margin_right = 91.0
margin_bottom = 32.0
theme = ExtResource( 1 )
text = "START"

[node name="OptionsButton" type="Button" parent="CanvasMenu/VBoxContainer"]
margin_top = 42.0
margin_right = 91.0
margin_bottom = 74.0
theme = ExtResource( 1 )
text = "OPTIONS"

[node name="Exit" type="Button" parent="CanvasMenu/VBoxContainer"]
margin_top = 84.0
margin_right = 91.0
margin_bottom = 116.0
theme = ExtResource( 1 )
text = "EXIT"

[node name="VersionLabel" type="Label" parent="CanvasMenu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -58.0
margin_top = -9.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "game version"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasMenu/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CanvasMenu/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CanvasMenu/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
